--- a/package.json
+++ b/package.json
@@ -9,15 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/kanit": "^4.5.10",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.7",
+    "@mui/styled-engine-sc": "^5.11.0",
     "@next/font": "13.1.5",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "chart.js": "^4.2.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "next": "13.1.5",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-player": "^2.11.0",
+    "react-redux": "^8.0.5",
+    "slug": "^8.2.2",
+    "slugify": "^1.6.6",
+    "styled-components": "^5.3.6",
+    "swiper": "^9.0.3",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/slug": "^5.0.3",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
